checkpoint to see if building works before handling more breaking changes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,13 +8,13 @@ export interface Props {
   customFontFamily?: string | null;
 }
 // imports
-import { pwaInfo } from "virtual:pwa-info";
+import {pwaInfo} from "virtual:pwa-info";
 import "../styles/global.css";
-import { Nav } from "@components";
-import { getPreferredLangFromHeader } from "@lib/utils";
+import Nav from "@components/global/Nav/Nav.astro";
+import {getPreferredLangFromHeader} from "@lib/utils";
 
 // data
-const { title, use100vh, textDir, repoUrl, customFont, customFontFamily } =
+const {title, use100vh, textDir, repoUrl, customFont, customFontFamily} =
   Astro.props;
 
 const preferredLocale = getPreferredLangFromHeader(Astro.request);
@@ -67,6 +67,7 @@ const initialDict = initialDictModule.default;
 
     <!-- LogRocket initialization -->
     <script
+      is:inline
       src="https://cdn.lr-ingest.com/LogRocket.min.js"
       crossorigin="anonymous"></script>
     <script>
@@ -79,7 +80,7 @@ const initialDict = initialDictModule.default;
   </head>
   <body
     style={customFont && customFontFamily
-      ? { "font-family": customFontFamily }
+      ? {"font-family": customFontFamily}
       : null}
     class={customFont && customFontFamily && "usingCustomFont"}
   >
@@ -93,6 +94,7 @@ const initialDict = initialDictModule.default;
     </div>
     <!-- Cloudflare Web Analytics -->
     <script
+      is:inline
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js"
       data-cf-beacon='{"token": "feb40c2dec594227888151cf163244d6"}'></script>
