updating deps stil & adjusting sw

--- a/src/components/global/Nav/Nav.astro
+++ b/src/components/global/Nav/Nav.astro
@@ -16,7 +16,7 @@ import {Header} from "./Header";
 <!-- using astro file for sever work and for client directive;  -->
 <div>
   <Header
-    client:only="solid-js"
+    client:load
     logo={Logo.src}
     logoWebP={LogoWebP.src}
     menuItems={menu}
