add see on wacs link

--- a/src/pages/[user]/[repo].astro
+++ b/src/pages/[user]/[repo].astro
@@ -175,6 +175,10 @@ const customFontFamily =
   typeof repoIndex.appMeta?.fontFamily == "string"
     ? repoIndex.appMeta?.fontFamily
     : null;
+
+if (!repoIndex.repoUrl) {
+  repoIndex.repoUrl = `${import.meta.env.PUBLIC_WACS_URL}/${user}/${repo}`;
+}
 ---
 
 <Layout
